--- a/Egzas.html
+++ b/Egzas.html
@@ -7,22 +7,56 @@
   </head>
   <link rel="stylesheet" type="text/css" href="/css/style.css" />
   <body>
-    <!-- <img
-      class="image"
-      src="/assets/nuotrauka.jpg"
-      alt="main image of the website"
-    /> -->
-    <div class="flex">
-      <div class="Pavad">
-        <h1>Eaters</h1>
-        <h3>RESTORANAS</h3>
+    <div class="image-Container">
+      <img
+        class="foto"
+        src="assets/nuotrauka.jpg"
+        alt="main image of the website"
+      />
+      <div class="flex-hero">
+        <div class="Pavad">
+          <h1>Eaters</h1>
+          <h3>RESTORANAS</h3>
+        </div>
+        <div class="Nuorodos">
+          <a href="#">PAGRINDINIS</a>
+          <a href="#">MENIU</a>
+          <a href="#">APIE EATERSus</a>
+          <a href="#">RENGINIAI</a>
+          <a href="#">GALERIJA</a>
+        </div>
       </div>
-      <div class="Nuorodos">
-        <a href="#">PAGRINDINIS</a>
-        <a href="#">MENIU</a>
-        <a href="#">APIE EATERSus</a>
-        <a href="#">RENGINIAI</a>
-        <a href="#">GALERIJA</a>
+    </div>
+    <div class="section section-meniu">
+      <div class="inner-container flex page-width">
+        <!-- idejom paveiksliukus -->
+        <div class="single-meniu">
+          <img class="image-reset" src="/assets/m-1.jpg" alt="deserts" />
+          <h3>Desertu meniu</h3>
+          <ul>
+            <li>Panakota</li>
+            <li>Surio pyragas</li>
+            <li>Napaleonas</li>
+          </ul>
+        </div>
+        <div class="single-meniu">
+          <img class="image-reset" src="/assets/m-3.jpg" alt="burger" />
+          <h3>Burgeriu meniu</h3>
+          <ul>
+            <li>Memohis</li>
+            <li>Sietlas</li>
+            <li>Texasas</li>
+            <li>Ohlahoma</li>
+          </ul>
+        </div>
+        <div class="single-meniu">
+          <img class="image-reset" src="/assets/m-2.jpg" alt="vegeteriskas" />
+          <h3>Vegetariskas meniu</h3>
+          <ul>
+            <li>Cezario salotos</li>
+            <li>Graikiskos salotos</li>
+          </ul>
+        </div>
       </div>
     </div>
   </body>
